[metadata]
name = ooi_harvester
maintainer = Landung Setiawan
maintainer_email = landungs@uw.edu
description = Tools to harvest OOI Data via M2M API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ooi-data/ooi-harvester
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering
author = Landung Setiawan
author_email = landungs@uw.edu
platforms = OS Independent

[options]
packages = find:
platforms = any
include_package_data = True
install_requires =
    fsspec
    requests
    s3fs>=0.5
    dask
    loguru
    pandas
    progressbar2
    typer
    zarr
    xarray<0.18
    lxml
    gspread==3.6
    fastparquet
    pygithub
    siphon
    prefect>=0.14
    rechunker
    pydantic
python_requires = >=3.7
setup_requires =
    setuptools_scm

[options.entry_points]
console_scripts =
    ooi-harvester = ooi_harvester.cli:app