[metadata]
name = ooi_harvester
maintainer = Landung Setiawan
maintainer_email = landungs@uw.edu
description = Tools to harvest OOI Data via M2M API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ooi-data/ooi-harvester
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering
author = Landung Setiawan
author_email = landungs@uw.edu
platforms = OS Independent

[options]
packages = find:
platforms = any
include_package_data = True
install_requires =
    fsspec
    requests
    s3fs
    dask
    loguru
    pandas
    progressbar2
    typer
    zarr
    xarray
    netcdf4
    zarr
    lxml
    gspread
    fastparquet
    pygithub
    pendulum
    siphon
    prefect<2
    rechunker
    pydantic
python_requires = >=3.8
setup_requires =
    setuptools_scm

[options.entry_points]
console_scripts =
    ooi-harvester = ooi_harvester.cli:app

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-flake8
    pytest-xdist
    pytest-mock
    pytest-docker
lint =
    black
    check-manifest
    flake8
    flake8-builtins
    flake8-comprehensions
    flake8-mutable
    flake8-print
    isort
    mypy
    numpydoc
    pre-commit
    pylint
docs = 
    sphinx
    sphinx-automodapi
all =
    %(test)s
    %(lint)s
    %(docs)s
